fix: err object name

--- a/exmple/index.html
+++ b/exmple/index.html
@@ -9,7 +9,7 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      new window.openApp()
+      new window.OpenApp()
     }, false)
   </script>
 
